jellyfin/jellyfin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: production
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: media
              mountPath: /files
            - name: state
              mountPath: /config
              subPath: config
            - name: state
              mountPath: /cache
              subPath: cache
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: main-external-media-pvc
        - name: state
          persistentVolumeClaim:
            claimName: jellyfin-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: production
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`tv.staging.imranr.dev`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: imranr-dev-tls
